# ai-agents-p2p

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
app/e2e/: auth.spec.ts  main-domain.spec.ts  subdomain-profile.spec.ts  user-journey.spec.ts
app/src/: App.tsx  main.tsx
deploy/: nginx.conf
frontend/: index.html  package-lock.json  package.json  vite.config.ts
orchestrator/: Dockerfile  __init__.py  app.py  config.py  models.py  names.py  proxy.py  run.py
registry/: Dockerfile  _verify.py  app.py  db.py  requirements.txt
scripts/: clean_all_agents.sh  create_test_agents.sh  run_node.py  run_two_agents.py
src/: server.py
tests/: conftest.py  test_a2a_client.py  test_agent_detail.py  test_chat.py  test_discovery_gossip.py  test_discovery_registry.py  test_identity_did.py  test_invite.py  test_llm_provider.py  test_matching_embeddings.py  test_matching_engine.py  test_matching_scorer.py  test_negotiation_states.py  test_network_address.py  test_network_go_online.py  test_network_relay.py  test_network_tunnel.py  test_notification_events.py  test_onboarding.py  test_orchestrator.py  test_privacy_guard.py  test_profile.py  test_profile_builder.py  test_profile_mcp_reader.py  test_project.py  test_project_manager.py  test_search.py  test_seed_nodes.py  test_server.py  test_storage_db.py  test_websocket.py
viz/: index.html  package-lock.json  package.json  vite.config.ts
viz/src/: api.ts  (+3 more)
(+88 files in other folders)
